--- a/slurm/config.yaml
+++ b/slurm/config.yaml
@@ -5,7 +5,7 @@ cluster:
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
     --job-name={rule}-{wildcards}
-    --output={params.err}
+    --output={params.out}
     --error={params.err}
     --time={resources.time}
 default-resources:
